# Progamming

./: 3th lab - true version.c  3th lab.c  BrokenLine.cpp  BrokenLine.h  CMakeLists.txt  ClosedBrokenLine.cpp  ClosedBrokenLine.h  GMMM.c  HououinKyouma.h  LABBBBBBBBBBBBBBBBBB.c  Lab4.c  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polynomial.cpp  Polynomial.h  README.md  RegularPolygon.cpp  RegularPolygon.h  SteinsAlgorithms.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  main.cpp
OOP2/: CMakeLists.txt  Currencies.cpp  Currencies.h  Currency.h  exchangeRate.txt  main.cpp
OOP4/: CMakeLists.txt  Cube.h  SmallCube.h  input.txt  main.cpp  output.txt
OOP5/: CMakeLists.txt  MyAllocator.h  main.cpp
OOP6/: CMakeLists.txt  Polynomial.h  main.cpp  test.cpp
arc/: CMakeLists.txt  a.txt  arc.c  b.txt
arc/unpack/: arc.c  b.txt  data.arc  data1.arc  data3.arc
